# conductor

kira/: Cargo.toml
kira-benchmarks/benches/: instances.rs
kira/src/: command.rs  lib.rs  manager.rs  sound.rs  sounds.rs  util.rs  value.rs  vec_map.rs
kira/src/arrangement/: clip.rs  mod.rs
kira/src/command/: mod.rs  producer.rs
kira/src/group/: groups.rs
kira/src/instance/: mod.rs
kira/src/manager/: active_ids.rs  backend.rs  ctx.rs  error.rs  mod.rs  resource_channel.rs  tests.rs
kira/src/manager/backend/: instances.rs  mod.rs  sequences.rs  streams.rs
kira/src/manager/backend/mixer/: mod.rs
kira/src/metronome/: metronomes.rs
kira/src/mixer/track/: mod.rs
kira/src/parameter/: handle.rs  mod.rs  parameters.rs  tween.rs
kira/src/playable/: playables.rs
kira/src/sequence/: mod.rs
kira/src/sound/: handle.rs  instance.rs  mod.rs  settings.rs  sounds.rs
kira/src/sound/data/: mod.rs  static_sound.rs
kira/src/sound/data/arrangement/: clip.rs  mod.rs
kira/src/sound/data/static_sound/: error.rs  mod.rs
kira/src/sound/instance/: handle.rs  mod.rs  settings.rs
kira/src/static_container/: index_map.rs
kira/src/vec_map/: mod.rs  tests.rs
