[package]
name = "kira"
version = "0.5.2"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Dynamic audio library for games"
repository = "https://github.com/tesselode/kira"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmarking = []
mp3 = ["minimp3"]
ogg = ["lewton"]
flac = ["claxon"]
wav = ["hound"]
default = ["mp3", "ogg", "flac", "wav"]

[dependencies]
assert_no_alloc = { version = "1.1.0", optional = true }
claxon = { version = "0.4.3", optional = true }
cpal = "0.13.1"
hound = { version = "3.4.0", optional = true }
lewton = { version = "0.10.1", optional = true }
minimp3 = { version = "0.5.0", optional = true }
rand = "0.8.3"
ringbuf = "0.2.3"
thiserror = "1.0.23"
